--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>GITHUB PAGES TEST</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+  <h1>Historial de Entrenamientos</h1>
+  <ul id="listaEntrenamientos"></ul>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
